# claude-skill-browser-use

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/browser-use/: SKILL.md
.claude/skills/browser-use/references/playwright-python-docs/: actions.md  authentication.md  browsers.md  downloads.md
.claude/skills/browser-use/references/tips/: authentication-sessions.md  browser-automation.md  browser-manual.md  google-images-optimization.md  tiktok-optimization.md  web-scraping.md  youtube-optimization.md
.claude/skills/browser-use/scripts/: README.md  browser.py  google_image.py  pyproject.toml  tiktok.py  youtube.py
scripts/: create_zip_file.py
