[project]
name = "browser-use-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "yt-dlp>=2024.12.6",
    "youtube-search-python>=1.6.6",
    "duckduckgo-search>=8.1.1",
]
